--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--css-->
 <link rel="stylesheet" type="text/css" href="./css/estylo.css"/>
 <!--juegos de colores(css tambien)-->
-<link id= "theme"rel="stylesheet" type="text/css" href="..//css/green.css"/>
+<link id= "theme"rel="stylesheet" type="text/css" href="./css/green.css"/>
 <!--moment (fecha)-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
