--- a/reloj.html
+++ b/reloj.html
@@ -7,9 +7,9 @@
     <title>proyecto</title>
 </head>
 <!--css-->
-<link rel="stylesheet" type="text/css" href="css/estylo.css"/>
+<link rel="stylesheet" type="text/css" href="./css/estylo.css"/>
 <!--juegos de colores(css tambien)-->
-<link id= "theme"rel="stylesheet" type="text/css" href="css/green.css"/>
+<link id= "theme"rel="stylesheet" type="text/css" href="./css/green.css"/>
 <!--jquery desde enlace via internet-->
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -21,7 +21,7 @@
 
 
   <!--el script-->
-  <script type="text/javascript" src="..//script.js"></script>
+  <script type="text/javascript" src="./script.js"></script>
 
 <body>
     <!--juegos de colores-->
