--- a/about.html
+++ b/about.html
@@ -12,17 +12,17 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
      <!--este script de abajo es para cargar el jquery-ui-->
   
-    <link rel="stylesheet" href="jquery-ui/jquery-ui.min.css">
-    <link rel="stylesheet" href="jquery-ui/jquery-ui.structure.min.css">
-    <link rel="stylesheet" href="jquery-ui/jquery-ui.theme.min.css">
+    <link rel="stylesheet" href="./jquery-ui/jquery-ui.min.css">
+    <link rel="stylesheet" href="./jquery-ui/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="./jquery-ui/jquery-ui.theme.min.css">
     <script type= "text/javascript" src="jquery-ui/jquery-ui.min.js"></script>
   
   <!--el script-->
 <script type="text/javascript" src="script.js"></script>
 <!--css-->
-<link rel="stylesheet" type="text/css" href="css/estylo.css"/>
+<link rel="stylesheet" type="text/css" href="./css/estylo.css"/>
 <!--juegos de colores(css tambien)-->
-<link id= "theme"rel="stylesheet" type="text/css" href="css/green.css"/>
+<link id= "theme"rel="stylesheet" type="text/css" href="./css/green.css"/>
 
 <body>
     <!--juegos de colores-->
@@ -44,8 +44,8 @@
                 <div class="clearfix"></div>
                 <nav  id="menu">
                 <ul>
-                    <li><a href="index.html">inicio</a></li>
-                    <li><a href="reloj.html">reloj</a></li>
+                    <li><a href="./index.html">inicio</a></li>
+                    <li><a href="./reloj.html">reloj</a></li>
                     
                 </ul>
                 </nav>
@@ -95,7 +95,7 @@ es una serie de videojuegos en 3ª. persona creada por SCE Santa Monica Studio y
     <p>
 Super Mario es una serie de videojuegos de plataformas creados por la empresa desarrolladora Nintendo y protagonizados por su mascota, Mario. También conocida como la serie Super Mario Bros. o simplemente la serie Mario, es la serie principal de la franquicia de Mario
     </p>
-    <a href="about.html" target="_blank" class='btn-blue'>Ir a su wiki</a>
+    <a href="https://es.wikipedia.org/wiki/Mario_Bros." target="_blank" class='btn-blue'>Ir a su wiki</a>
      </div>
   </div>
 
