--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   
   <!--el script-->
-<script type="text/javascript" src="./script.js"></script>
+<script type="text/javascript" src="script.js"></script>
 <!--css-->
 <link rel="stylesheet" type="text/css" href="./css/estylo.css"/>
 <!--juegos de colores(css tambien)-->
